--- a/pom.xml
+++ b/pom.xml
@@ -62,18 +62,16 @@
                 </executions>
                 <configuration>
                     <rules>
-                        <rules>
-                            <rule>
-                                <element>BUNDLE</element>
-                                <limits>
+                          <rule>
+                              <element>BUNDLE</element>
+                               <limits>
                                     <limit>
-                                        <counter>INSTRUCTION</counter>
+                                        <counter>BRANCH</counter>
                                         <value>COVEREDRATIO</value>
-                                        <minimum>1.0</minimum>
+                                        <minimum>100%</minimum>
                                     </limit>
                                 </limits>
                             </rule>
-                        </rules>
                     </rules>
                 </configuration>
             </plugin>
